created an abstract test class and created the first search book test